// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddCompany component renders correctly, initial 1`] = `
<section
  className="sc-bdVaJa cgbLUC"
>
  <form
    className="sc-bwzfXH gJIwTT"
    onSubmit={[Function]}
  >
    <h1
      className="sc-htpNat cfPrNC"
    >
      Add a New Company
    </h1>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="companyName"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label
        className="sc-ifAKCX crRGrj"
        value=""
      >
        Company name
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="firstName"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label
        className="sc-ifAKCX crRGrj"
        value=""
      >
        Administrators First Name
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="lastName"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label
        className="sc-ifAKCX crRGrj"
        value=""
      >
        Administrators Last Name
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="email"
        onChange={[Function]}
        type="email"
        value=""
      />
      <label
        className="sc-ifAKCX crRGrj"
        value=""
      >
        Administrators E-Mail
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="password"
        onChange={[Function]}
        type="password"
        value=""
      />
      <label
        className="sc-ifAKCX crRGrj"
        value=""
      >
        Password
      </label>
    </div>
    <button
      className="sc-gzVnrw jmsTpF"
      disabled={undefined}
      onClick={[Function]}
    >
      Add
    </button>
  </form>
</section>
`;

exports[`AddCompany component renders correctly, with data 1`] = `
<section
  className="sc-bdVaJa cgbLUC"
>
  <form
    className="sc-bwzfXH gJIwTT"
    onSubmit={[Function]}
  >
    <h1
      className="sc-htpNat cfPrNC"
    >
      Add a New Company
    </h1>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="companyName"
        onChange={[Function]}
        type="text"
        value="company!"
      />
      <label
        className="sc-ifAKCX bXngpg"
        value="company!"
      >
        Company name
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="firstName"
        onChange={[Function]}
        type="text"
        value="kalle"
      />
      <label
        className="sc-ifAKCX bXngpg"
        value="kalle"
      >
        Administrators First Name
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="lastName"
        onChange={[Function]}
        type="text"
        value="kula"
      />
      <label
        className="sc-ifAKCX bXngpg"
        value="kula"
      >
        Administrators Last Name
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="email"
        onChange={[Function]}
        type="email"
        value="woo@woo.com"
      />
      <label
        className="sc-ifAKCX bXngpg"
        value="woo@woo.com"
      >
        Administrators E-Mail
      </label>
    </div>
    <div
      className="sc-EHOje cprGDq"
    >
      <input
        className="sc-bxivhb hkzSDr"
        name="password"
        onChange={[Function]}
        type="password"
        value="aaa"
      />
      <label
        className="sc-ifAKCX bXngpg"
        value="aaa"
      >
        Password
      </label>
    </div>
    <button
      className="sc-gzVnrw jmsTpF"
      disabled={undefined}
      onClick={[Function]}
    >
      Add
    </button>
  </form>
</section>
`;
